{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 34,
  "lineage": "1fbd555c-84a6-64ee-2023-ad82149b4236",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "dev_architect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0658ab4dadaf5a974",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-0658ab4dadaf5a974",
            "name": "dev_architect",
            "tags": {
              "Environment": "architect",
              "Name": "dev_architect"
            },
            "timeouts": null,
            "vpc_id": "vpc-05df881f6cb8c52d1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "ops_architect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-00e3e0a2b25eb4504",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-00e3e0a2b25eb4504",
            "name": "ops_architect",
            "tags": {
              "Environment": "architect",
              "Name": "ops_architect"
            },
            "timeouts": null,
            "vpc_id": "vpc-05df881f6cb8c52d1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "ops_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0f44c7fc41b8bd8b5",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-0f44c7fc41b8bd8b5",
            "name": "ops_bastion",
            "tags": {
              "Environment": "architect",
              "Name": "ops_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-05df881f6cb8c52d1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "architect_bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-03a53580f3c0a9e72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 249,
            "cidr_block": "192.170.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a53580f3c0a9e72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "architect",
              "Name": "architect_bastion_subnet"
            },
            "vpc_id": "vpc-05df881f6cb8c52d1"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "architect_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-05734beb5c90f411b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 250,
            "cidr_block": "192.170.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05734beb5c90f411b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "architect",
              "Name": "architect_dev_subnet"
            },
            "vpc_id": "vpc-05df881f6cb8c52d1"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "architect_ops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-02183d5d7e2f6ce37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 250,
            "cidr_block": "192.170.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02183d5d7e2f6ce37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "architect",
              "Name": "architect_ops_subnet"
            },
            "vpc_id": "vpc-05df881f6cb8c52d1"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "whiteboard_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:vpc/vpc-05df881f6cb8c52d1",
            "cidr_block": "192.170.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0227af26edcb73f95",
                "cidr_block": "192.170.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0705ec2b8c927dbea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05df881f6cb8c52d1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-064e377a18bdf023f",
            "owner_id": "569083195829",
            "tags": {
              "Environment": "architect",
              "Name": "archi_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "architect_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f24ce5b32d20d7bf",
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:instance/i-002534e88f0be0ee4",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "architect_policy",
            "id": "i-002534e88f0be0ee4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "greatstar_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0062e8c75cb6d5912",
            "private_dns": "ip-192-170-2-65.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.170.2.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04b67a3a07ba806da",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05734beb5c90f411b",
            "tags": {
              "Environment": "architect",
              "Name": "architect_dev"
            },
            "tags_all": {
              "Environment": "architect",
              "Name": "architect_dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0658ab4dadaf5a974"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.architect_policy",
            "data.aws_security_group.dev_architect",
            "data.aws_subnet.architect_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "architect_ops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f24ce5b32d20d7bf",
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:instance/i-0436c494137609cc9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "architect_policy",
            "id": "i-0436c494137609cc9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "greatstar_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06b5916e94d792ace",
            "private_dns": "ip-192-170-1-120.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.170.1.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d2705babbc56179f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02183d5d7e2f6ce37",
            "tags": {
              "Environment": "architect",
              "Name": "architect_ops"
            },
            "tags_all": {
              "Environment": "architect",
              "Name": "architect_ops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00e3e0a2b25eb4504"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.architect_policy",
            "data.aws_security_group.ops_architect",
            "data.aws_subnet.architect_ops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02727842b84fc892d",
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:instance/i-07de59daed2042ce3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "architect_policy",
            "id": "i-07de59daed2042ce3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "greatstar_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08c55cd5135f3e12d",
            "private_dns": "ip-192-170-0-220.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.170.0.220",
            "public_ip": "54.178.56.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-046eedce7768684d6",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03a53580f3c0a9e72",
            "tags": {
              "Environment": "architect",
              "Name": "architect_bastion"
            },
            "tags_all": {
              "Environment": "architect",
              "Name": "architect_bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f44c7fc41b8bd8b5"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.architect_policy",
            "aws_iam_role.architect_policy",
            "data.aws_security_group.ops_bastion",
            "data.aws_subnet.architect_bastion_subnet"
          ]
        }
      ]
    }
  ]
}